--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .cabecalho {
-    background-color: #383D58;
+    background-color: #6926AC;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -20,4 +20,4 @@
 * {
     margin: 0;
     padding: 0;
-}v
+}
